# Local-Code-Explainer

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RS_Code_Report.txt  config.json  create_shortcut.ps1  main.py  ollama_setup.sh  pyproject.toml  rs_rules.json  run_app.bat
.github/workflows/: lint.yml  tests.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  EXAMPLES.md  INSTALLATION.md  PERFORMANCE.md  TROUBLESHOOTING.md
docs/ADR/: 0001-use-ollama-for-local-llms.md  0002-privacy-first-approach.md  0003-caching-strategy.md
examples/: sample_code.py
src/: config.py  main_gui.py
src/api/: schemas.py  server.py
src/explainer/: cache.py  cli.py  code_parser.py  explainer.py  formatters.py  llm_handler.py
src/web/: app.py
src/web/assets/: style.css
tests/: test_api.py  test_cli.py  test_code_parser.py  test_explainer.py
