[project]
name = "local-code-explainer"
version = "0.1.0"
description = "Herramienta local para explicar código usando LLMs (Ollama) con enfoque en privacidad."
authors = [
    { name = "Robert Salinas" }
]
license = { text = "MIT" }
dependencies = [
    "typer[all]>=0.9.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "ollama>=0.1.0",
    "gradio>=4.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "sentence-transformers>=2.2.0",
    "httpx>=0.24.0",
]
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
explain-code = "explainer.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
