[project]
name = "local-code-explainer"
version = "0.1.0"
description = "Herramienta local para explicar código usando LLMs (Ollama) con enfoque en privacidad."
authors = [
    { name = "Robert Salinas" }
]
license = { text = "MIT" }
dependencies = [
    "customtkinter>=5.2.0",
    "matplotlib>=3.7.0",
    "requests>=2.30.0",
    "jinja2>=3.1.0"
]
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
explain-code = "explainer.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
